[package]
name = "halberd"
version = "0.0.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
edition = "2018"

[dependencies]
decorum = "^0.3.1"
num = "^0.2.0"
typenum = "^1.11.0"

[dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "115e10b"
default-features = false
features = []

[dev-dependencies]

[dev-dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "115e10b"
default-features = false
features = [
    "geometry-nalgebra"
]
